...
      {description}
    </Text>
    <Text style={$speakerText}>{speaker}</Text>
  </View>
)

export const ScheduleScreen: FC<TabScreenProps<"Schedule">> = observer(function ScheduleScreen() {
  useHeader({ title: "Schedule" })
  const navigation = useAppNavigation()

  return (
    <Screen style={$root} preset="scroll" contentContainerStyle={$container}>
      <Text preset="heading" style={$heading}>
        Wed, May 17
      </Text>
      <Text style={$subheading}>React Native Workshops</Text>
      <Card
        preset="reversed"
        HeadingComponent={<Header time="6:00 — 8:00 am" title="Check-in & Registration" />}
        content="Check-in for attendees with a workshop ticket begins at 6:00 am."
...
