...
  },
  welcomeScreen: {
    heading: "Welcome to Chain React!",
    topBlurb:
      "Welcome to the 4th annual React Native Conference! This app is your official companion for all things Chain React.\n\nYou can do it all in the app: View the schedule, find directions to the afterparty, or even recommendations to grab food. It's all here in the app!",
    bottomBlurb: "Let's Get Started",
    scheduleButton: "See the schedule",
  },
  errorScreen: {
    title: "Oh, bother!",
    friendlySubtitle:
      "Bugs happen to the best of us! Try resetting or restarting the app and see if that helps. If not, feel free to file an issue on GitHub and our team of highly-trained llamas will look into it. Bonus points: Find the bug and open a PR!",
    reset: "Reset",
...
